--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 h1{
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     font-weight: 700;
     color: #1F1F1F;
 }
@@ -25,4 +25,13 @@ h2{
     font-size: 2.5rem;
     font-weight: 500;
     color: #FF136F;
+}
+
+.carousel-item {
+    padding: 20px 40px;
+}
+
+.col-lg-7{
+    padding-right: 15px;
+    padding-left: 15px;
 }
