--- a/style.css
+++ b/style.css
@@ -30,13 +30,13 @@ h2{
 h3{
     font-weight: 600;
     font-size: 2rem;
-    color: #1F1F1F;
+    color: #000;
 }
 
 h4{
     font-weight: 500;
     font-size: 1.5rem;
-    color: #000;
+    color: #ffc5a3;
     margin-bottom: 15px;
 }
 
